--- a/public/css/plugins/apps.css
+++ b/public/css/plugins/apps.css
@@ -2946,10 +2946,9 @@ button.toast-close-button {
   margin-top: 13px !important;
   margin-bottom: 13px !important;
   cursor: pointer !important;
-  padding-left: 13px !important;
-  padding-right: 13px !important;
-  font-size: 23px !important;
-  letter-spacing: 1px !important;
+  padding: 8px 13px !important;
+  font-size: 23.7px !important;
+  letter-spacing: 1.3px !important;
 }
 
 .alert {
