--- a/public/css/plugins/apps.css
+++ b/public/css/plugins/apps.css
@@ -1404,8 +1404,8 @@ td {
       left: -170%;
       width: 270%;
 
-      /* left: -820%;
-      width: 920%; */
+      left: -820%;
+      width: 920%;
   }
   .attr-nav {
       margin-right: 0 !important;
@@ -1476,8 +1476,8 @@ td {
       left: -110%;
       width: 260%;
 
-      /* left: -57vw !important;
-      width: 99vw !important; */
+      left: -57vw !important;
+      width: 99vw !important;
   }
 
   .thegold img {
@@ -1500,8 +1500,8 @@ td {
       left: -110%;
       width: 255%;
 
-      /* left: -59.5vw !important;
-      width: 99vw !important; */
+      left: -59.5vw !important;
+      width: 99vw !important;
   }
   .thegold img {
       height: 51px !important;
