--- a/public/css/plugins/login.css
+++ b/public/css/plugins/login.css
@@ -126,7 +126,7 @@ blink {
   padding: 11px 14px !important;
 
   border: 2.4px solid rgb(31, 67, 87) !important;
-  background: lightcyan !important;
+  background: rgb(255, 255, 100) !important;
   box-shadow: 0 0 0 1.4px lightcyan !important;
 }
 
