--- a/public/css/plugins/vertical.css
+++ b/public/css/plugins/vertical.css
@@ -25,16 +25,6 @@ height: 100%;
 width: 7px;
 background: #fff !important;
 }
-@media only screen and (min-width: 540px) {
-#cd-time {
-  margin-top: 3em;
-  margin-bottom: 3em;
-}
-#cd-time::before {
-  left: 50%;
-  margin-left: -2px;
-}
-}
 
 .cd-time-block {
 position: relative;
@@ -55,17 +45,7 @@ margin-top: 0;
 .cd-time-block:last-child {
 margin-bottom: 0;
 }
-@media only screen and (min-width: 540px) {
-.cd-time-block {
-  margin:  0;
-}
-.cd-time-block:first-child {
-  margin-top: 0;
-}
-.cd-time-block:last-child {
-  margin-bottom: 0;
-}
-}
+
 .cd-time-img {
   position: absolute;
   top: 0;
@@ -78,90 +58,27 @@ margin-bottom: 0;
   font-size: 20px;
   color: rgba(18, 29, 51, 0.92);
 }
-@media only screen and (min-width: 540px) {
-.cd-time-img {
-  width: 60px;
-  height: 60px;
-  line-height: 60px;
-  left: 50%;
-  margin-left: -30px;
-}
-.cssanimations .cd-time-img.is-hidden {
-  visibility: hidden;
-}
-.cssanimations .cd-time-img.bounce-in {
-  visibility: visible;
-  -webkit-animation: cd-bounce-1 0.6s;
-  -moz-animation: cd-bounce-1 0.6s;
-  animation: cd-bounce-1 0.6s;
-}
-}
 
-@-webkit-keyframes cd-bounce-1 {
-0% {
-  opacity: 0;
-  -webkit-transform: scale(0.5);
-}
-
-60% {
-  opacity: 1;
-  -webkit-transform: scale(1.2);
-}
-
-100% {
-  -webkit-transform: scale(1);
-}
-}
-@-moz-keyframes cd-bounce-1 {
-0% {
-  opacity: 0;
-  -moz-transform: scale(0.5);
-}
-
-60% {
-  opacity: 1;
-  -moz-transform: scale(1.2);
-}
-
-100% {
-  -moz-transform: scale(1);
-}
-}
-@keyframes cd-bounce-1 {
-0% {
-  opacity: 0;
-  -webkit-transform: scale(0.5);
-  -moz-transform: scale(0.5);
-  -ms-transform: scale(0.5);
-  -o-transform: scale(0.5);
-  transform: scale(0.5);
-}
-
-60% {
-  opacity: 1;
-  -webkit-transform: scale(1.2);
-  -moz-transform: scale(1.2);
-  -ms-transform: scale(1.2);
-  -o-transform: scale(1.2);
-  transform: scale(1.2);
-}
-
-100% {
-  -webkit-transform: scale(1);
-  -moz-transform: scale(1);
-  -ms-transform: scale(1);
-  -o-transform: scale(1);
-  transform: scale(1);
-}
-}
 .cd-time-content {
-position: relative;
-margin-left: 60px;
-background: rgba(18, 29, 51, 0.7);
-border-radius: 0;
-padding: 3px;
-box-shadow: 0 5px 5px -5px rgba(0, 0, 0, 0.1);
+  position: relative;
+  margin-left: 5px;
+  margin: 1px 5px !important;
+  background: rgba(18, 29, 51, 0.7);
+  border-radius: 0;
+  padding: 3px;
+  box-shadow: 0 5px 5px -5px rgba(0, 0, 0, 0.1);
 }
+@media (max-width: 590px)  {
+  .cd-time-content {
+    position: relative;
+    margin: 1px 1px !important;
+    background: rgba(18, 29, 51, 0.7);
+    border-radius: 0;
+    padding: 3px;
+    box-shadow: 0 5px 5px -5px rgba(0, 0, 0, 0.1);
+  }
+}
+
 .cd-time-content img {
 width: 100%;
 display: block;
@@ -210,162 +127,3 @@ padding: .8em 0;
 opacity: .7;
 }
 
-@media only screen and (min-width: 540px) {
-.cd-time-content {
-  margin-left: 0;
-  padding: 1.6em;
-  width: 45%;
-}
-.cd-time-content .cd-read-more {
-  float: left;
-}
-.cd-time-content .cd-date {
-  position: absolute;
-  width: 100%;
-  left: 122%;
-  top: 6px;
-}
-.cd-time-block:nth-child(even) .cd-time-content {
-  float: right;
-}
-.cd-time-block:nth-child(even) .cd-time-content .cd-read-more {
-  float: right;
-}
-.cd-time-block:nth-child(even) .cd-time-content .cd-date {
-  left: auto;
-  right: 122%;
-  text-align: right;
-}
-.cssanimations .cd-time-content.is-hidden {
-  visibility: hidden;
-}
-.cssanimations .cd-time-content.bounce-in {
-  visibility: visible;
-  -webkit-animation: cd-bounce-2 0.6s;
-  -moz-animation: cd-bounce-2 0.6s;
-  animation: cd-bounce-2 0.6s;
-}
-}
-
-@media only screen and (min-width: 540px) {
-/* inverse bounce effect on even content blocks */
-.cssanimations .cd-time-block:nth-child(even) .cd-time-content.bounce-in {
-  -webkit-animation: cd-bounce-2-inverse 0.6s;
-  -moz-animation: cd-bounce-2-inverse 0.6s;
-  animation: cd-bounce-2-inverse 0.6s;
-}
-}
-@-webkit-keyframes cd-bounce-2 {
-0% {
-  opacity: 0;
-  -webkit-transform: translateX(-100px);
-}
-
-60% {
-  opacity: 1;
-  -webkit-transform: translateX(20px);
-}
-
-100% {
-  -webkit-transform: translateX(0);
-}
-}
-@-moz-keyframes cd-bounce-2 {
-0% {
-  opacity: 0;
-  -moz-transform: translateX(-100px);
-}
-
-60% {
-  opacity: 1;
-  -moz-transform: translateX(20px);
-}
-
-100% {
-  -moz-transform: translateX(0);
-}
-}
-@keyframes cd-bounce-2 {
-0% {
-  opacity: 0;
-  -webkit-transform: translateX(-100px);
-  -moz-transform: translateX(-100px);
-  -ms-transform: translateX(-100px);
-  -o-transform: translateX(-100px);
-  transform: translateX(-100px);
-}
-
-60% {
-  opacity: 1;
-  -webkit-transform: translateX(20px);
-  -moz-transform: translateX(20px);
-  -ms-transform: translateX(20px);
-  -o-transform: translateX(20px);
-  transform: translateX(20px);
-}
-
-100% {
-  -webkit-transform: translateX(0);
-  -moz-transform: translateX(0);
-  -ms-transform: translateX(0);
-  -o-transform: translateX(0);
-  transform: translateX(0);
-}
-}
-@-webkit-keyframes cd-bounce-2-inverse {
-0% {
-  opacity: 0;
-  -webkit-transform: translateX(100px);
-}
-
-60% {
-  opacity: 1;
-  -webkit-transform: translateX(-20px);
-}
-
-100% {
-  -webkit-transform: translateX(0);
-}
-}
-@-moz-keyframes cd-bounce-2-inverse {
-0% {
-  opacity: 0;
-  -moz-transform: translateX(100px);
-}
-
-60% {
-  opacity: 1;
-  -moz-transform: translateX(-20px);
-}
-
-100% {
-  -moz-transform: translateX(0);
-}
-}
-@keyframes cd-bounce-2-inverse {
-0% {
-  opacity: 0;
-  -webkit-transform: translateX(100px);
-  -moz-transform: translateX(100px);
-  -ms-transform: translateX(100px);
-  -o-transform: translateX(100px);
-  transform: translateX(100px);
-}
-
-60% {
-  opacity: 1;
-  -webkit-transform: translateX(-20px);
-  -moz-transform: translateX(-20px);
-  -ms-transform: translateX(-20px);
-  -o-transform: translateX(-20px);
-  transform: translateX(-20px);
-}
-
-100% {
-  -webkit-transform: translateX(0);
-  -moz-transform: translateX(0);
-  -ms-transform: translateX(0);
-  -o-transform: translateX(0);
-  transform: translateX(0);
-}
-}
