--- a/public/css/plugins/email.css
+++ b/public/css/plugins/email.css
@@ -75,6 +75,10 @@
 
 
 #voice-body-div {
+    display: flex;
+    justify-content: center;
+    margin: 5px 0;
+    
     margin: 3px !important;
     background: rgba(255, 255, 255, 0.7) !important;
 }
